--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -29,7 +29,7 @@ jobs:
         run: |
           Rscript -e 'install.packages(c("remotes"))'
           Rscript -e 'remotes::install_cran(c("config", "googleCloudStorageR"), quick = TRUE)'
-          Rscript -e 'source("get_data.R")'
+          Rscript -e 'source("update_data.R")'
       - name: Commit changes to package data
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
