--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -35,3 +35,40 @@ jobs:
         with:
           file_pattern: data/*
 
+  deploy:
+    name: Deploy shiny app
+    needs: update-data
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v0.6.1
+        with:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
+
+      - name: Authorize Docker push
+        run: gcloud auth configure-docker africa-south1-docker.pkg.dev
+
+      - name: Build and push app container
+        env:
+          GOOGLE_PROJECT: ${{ secrets.GCP_PROJECT_ID }}
+        run: |
+          docker build -t africa-south1-docker.pkg.dev/${GOOGLE_PROJECT}/peskas-malawi-shiny/${GITHUB_SHA} -f prod.Dockerfile .
+          docker push africa-south1-docker.pkg.dev/${GOOGLE_PROJECT}/peskas-malawi-shiny/${GITHUB_SHA}
+      - name: Deploy to Cloud Run
+        id: deploy
+        uses: google-github-actions/deploy-cloudrun@v0.10.3
+        with:
+          service: peskas-zanzibar-shiny
+          image: africa-south1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/peskas-malawi-shiny/${{ github.sha }}
+          flags: "--cpu=2 --memory=2048Mi --concurrency=20 --max-instances=2"
+          region: africa-south1
+
+      - name: Show Output
+        run: echo ${{ steps.deploy.outputs.url }}
+
