--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -58,17 +58,16 @@ jobs:
         env:
           GOOGLE_PROJECT: ${{ secrets.GCP_PROJECT_ID }}
         run: |
-          docker build -t africa-south1-docker.pkg.dev/${GOOGLE_PROJECT}/peskas-malawi-shiny/${GITHUB_SHA} -f prod.Dockerfile .
-          docker push africa-south1-docker.pkg.dev/${GOOGLE_PROJECT}/peskas-malawi-shiny/${GITHUB_SHA}
+          docker build -t africa-south1-docker.pkg.dev/peskas/peskas-malawi-shiny/${GITHUB_SHA} -f prod.Dockerfile .
+          docker push africa-south1-docker.pkg.dev/peskas/peskas-malawi-shiny/${GITHUB_SHA}
       - name: Deploy to Cloud Run
         id: deploy
         uses: google-github-actions/deploy-cloudrun@v0.10.3
         with:
           service: peskas-malawi-shiny
-          image: africa-south1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/peskas-malawi-shiny/${{ github.sha }}
+          image: africa-south1-docker.pkg.dev/peskas/peskas-malawi-shiny/${{ github.sha }}
           flags: "--cpu=2 --memory=2048Mi --concurrency=20 --max-instances=2"
           region: africa-south1
-
       - name: Show Output
         run: echo ${{ steps.deploy.outputs.url }}
 
