--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -4,19 +4,23 @@
 dev_history.R
 ^dev$
 $run_dev.*
-^.here$
 ^LICENSE\.md$
-^README\.Rmd$
-^cran-comments\.md$
-^\.github$
-^codecov\.yml$
-^_pkgdown\.yml$
-^docs$
-^pkgdown$
+^CODE_OF_CONDUCT\.md$
+^app\.R$
+^rsconnect$
 ^Dockerfile*
-^docker-compose.yaml$
-^.dockerignore$
+^prod.Dockerfile*
 ^rstudio-prefs.json$
 ^auth$
-^.DS_Store$
-^CODE_OF_CONDUCT\.md$
+^docker-compose.yaml$
+^\.github$
+^update_data.R$
+^app_params.yml$
+^appFileManifest$
+^shiny.config$
+^load_tests$
+^docs$
+^_pkgdown.yml
+
+
+
