--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,7 +4,7 @@ on:
       - main
       - master
   schedule:
-    - cron:  '0 1 * * 1'
+    - cron: '0 1 * * 1'
 
 name: Deploy to Google Cloud Run
 
@@ -18,12 +18,10 @@ jobs:
       GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
       MONGODB_CONNECTION_STRING: ${{ secrets.MONGODB_CONNECTION_STRING }}
       MAPBOX_TOKEN: ${{ secrets.MAPBOX_TOKEN }}
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
       - run: git config --global --add safe.directory /__w/peskas.malawi.portal/peskas.malawi.portal
-
       - name: Update data
         run: |
           Rscript -e 'install.packages(c("remotes"))'
@@ -35,37 +33,33 @@ jobs:
           file_pattern: data/*
 
   deploy:
-    name: Deploy shiny app
+    name: Deploy Shiny app
     needs: update-data
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
-      - name: Set up Cloud SDK
+      - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v0.6.1
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
-
       - name: Authorize Docker push
-        run: gcloud auth configure-docker europe-west1-docker.pkg.dev
-
+        run: gcloud auth configure-docker africa-south1-docker.pkg.dev
       - name: Build and push app container
         env:
           GOOGLE_PROJECT: ${{ secrets.GCP_PROJECT_ID }}
         run: |
-          docker build -t europe-west1-docker.pkg.dev/${GOOGLE_PROJECT}/peskas-malawi-shiny/${GITHUB_SHA} -f prod.Dockerfile .
-          docker push europe-west1-docker.pkg.dev/${GOOGLE_PROJECT}/peskas-malawi-shiny/${GITHUB_SHA}
+          docker build -t africa-south1-docker.pkg.dev/${GOOGLE_PROJECT}/peskas-malawi-shiny/${GITHUB_SHA} -f prod.Dockerfile .
+          docker push africa-south1-docker.pkg.dev/${GOOGLE_PROJECT}/peskas-malawi-shiny/${GITHUB_SHA}
       - name: Deploy to Cloud Run
         id: deploy
         uses: google-github-actions/deploy-cloudrun@v0.10.3
         with:
           service: peskas-malawi-shiny
-          image: europe-west1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/peskas-malawi-shiny/${{ github.sha }}
+          image: africa-south1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/peskas-malawi-shiny/${{ github.sha }}
           flags: "--cpu=2 --memory=2048Mi --concurrency=20 --max-instances=2"
-          region: europe-west1
+          region: africa-south1
       - name: Show Output
-        run: echo ${{ steps.deploy.outputs.url }}
+        run: echo "App deployed at ${{ steps.deploy.outputs.url }}"
