--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -59,7 +59,7 @@ jobs:
         with:
           service: peskas-malawi-shiny
           image: africa-south1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/peskas-malawi-shiny/${{ github.sha }}
-          flags: "--cpu=2 --memory=2048Mi --concurrency=1 --min-instances=1 --max-instances=5"
+          flags: "--cpu=2 --memory=2048Mi --concurrency=1 --max-instances=5"
           region: africa-south1
       - name: Show Output
         run: echo "App deployed at ${{ steps.deploy.outputs.url }}"
