optimize functions with memoise and chaching + deploy to europe + add revenue tab + generalize time series and spider plots

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,6 @@ Imports:
     golem (>= 0.4.1),
     htmltools,
     deckgl,
-    RColorBrewer,
     reactable,
     reactablefmtr,
     shiny (>= 1.9.1),
@@ -26,7 +25,8 @@ Imports:
     scales,
     htmlwidgets,
     V8,
-    grDevices
+    grDevices,
+    memoise
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
