set cloud run params

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -59,7 +59,7 @@ jobs:
         with:
           service: peskas-malawi-shiny
           image: europe-west1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/peskas-malawi-shiny/${{ github.sha }}
-          flags: "--cpu=2 --memory=2048Mi --concurrency=2 --max-instances=10"
+          flags: "--cpu=2 --memory=4Gi --concurrency=1 --max-instances=10 --min-instances=1"
           region: europe-west1
       - name: Show Output
         run: echo "App deployed at ${{ steps.deploy.outputs.url }}"
