- Add local vendor directory for JS dependencies instead of CDN - Cache apexcharts, jquery, tabler, and deck.gl files in Docker - Update app_ui.R to use local vendor files - Improve app reliability by removing CDN dependencies - Add proper file permissions for vendor directory in Docker

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -39,27 +39,49 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
+      # Create vendor directory and download dependencies
+      - name: Setup vendor directory
+        run: |
+          mkdir -p www/vendor
+          curl -L -o www/vendor/apexcharts.min.js https://cdn.jsdelivr.net/npm/apexcharts@3.26.2/dist/apexcharts.min.js
+          curl -L -o www/vendor/jquery.min.js https://code.jquery.com/jquery-3.6.0.min.js
+          curl -L -o www/vendor/tabler.min.css https://unpkg.com/@tabler/core@1.0.0-beta21/dist/css/tabler.min.css
+          curl -L -o www/vendor/tabler.min.js https://unpkg.com/@tabler/core@1.0.0-beta21/dist/js/tabler.min.js
+          curl -L -o www/vendor/deck.min.js https://cdn.jsdelivr.net/npm/deck.gl@9.0.34/dist/index.js
+
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v0.6.1
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
+
       - name: Authorize Docker push
         run: gcloud auth configure-docker europe-west1-docker.pkg.dev
+
       - name: Build and push app container
         env:
           GOOGLE_PROJECT: ${{ secrets.GCP_PROJECT_ID }}
         run: |
           docker build -t europe-west1-docker.pkg.dev/${GOOGLE_PROJECT}/peskas-malawi-shiny/${GITHUB_SHA} -f prod.Dockerfile .
           docker push europe-west1-docker.pkg.dev/${GOOGLE_PROJECT}/peskas-malawi-shiny/${GITHUB_SHA}
+
       - name: Deploy to Cloud Run
         id: deploy
         uses: google-github-actions/deploy-cloudrun@v0.10.3
         with:
           service: peskas-malawi-shiny
           image: europe-west1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/peskas-malawi-shiny/${{ github.sha }}
-          flags: "--cpu=2 --memory=4Gi --concurrency=1 --max-instances=10 --min-instances=1"
+          flags: >-
+            --cpu=2
+            --memory=6Gi
+            --concurrency=80
+            --max-instances=10
+            --min-instances=2
+            --timeout=300
+            --execution-environment=gen2
           region: europe-west1
+
       - name: Show Output
         run: echo "App deployed at ${{ steps.deploy.outputs.url }}"
