fix: improve resources loading reliability
- Control JS dependencies load order
- Add load completion check
- Update Cloud Run startup settings:
 - Add startup CPU boost
 - Disable CPU throttling
 - Add startup timeout 180s

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -79,7 +79,10 @@ jobs:
            --concurrency=40
            --max-instances=10
            --min-instances=2
-
+           --timeout=300
+           --startup-cpu-boost
+           --cpu-throttling=false
+           --startup-timeout=180
           region: europe-west1
 
       - name: Show Output
