--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -74,15 +74,15 @@ jobs:
           service: peskas-malawi-shiny
           image: europe-west1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/peskas-malawi-shiny/${{ github.sha }}
           flags: >-
-           --cpu=2
-           --memory=4Gi
-           --concurrency=40
-           --max-instances=10
-           --min-instances=2
-           --timeout=300
-           --startup-cpu-boost
-           --cpu-throttling=false
-           --startup-timeout=180
+            --cpu=2
+            --memory=4Gi
+            --concurrency=40
+            --max-instances=10
+            --min-instances=2
+            --timeout=300
+            --cpu-boost
+            --no-cpu-throttling
+            --session-affinity
           region: europe-west1
 
       - name: Show Output
