Refactor package structure and optimize Dockerfile
- Removed download steps for JavaScript dependencies; now served locally from `www/vendor`
- Added imports for deckgl, memoise, reactable, reactablefmtr, and scales to satisfy R CMD check requirements
- Improved documentation for functions and datasets
- Adjusted Dockerfile to streamline build process and remove redundant installations

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,6 @@ Imports:
     config (>= 0.3.2),
     dplyr,
     golem (>= 0.4.1),
-    htmltools,
     deckgl,
     reactable,
     reactablefmtr,
@@ -24,9 +23,9 @@ Imports:
     rlang,
     scales,
     htmlwidgets,
-    V8,
-    grDevices,
-    memoise
+    htmltools,
+    memoise,
+    magrittr
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
