**Add treemap visualizations for catch and revenue**
Implemented treemap modules and UI components to enhance data visualization of catch and revenue rates by fishing gear type. Updated dependencies and data structures to support the new features, improving data analysis and user insights.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,9 @@ Imports:
     htmlwidgets,
     htmltools,
     memoise,
-    magrittr
+    magrittr,
+    purrr,
+    viridisLite
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
