update env variables

--- a/inst/golem-config.yml
+++ b/inst/golem-config.yml
@@ -22,14 +22,18 @@ default:
 production:
   app_prod: yes
   deployment:
-    asset_id: !expr Sys.getenv('ASSET_ID')
     google_key: !expr Sys.getenv('GCP_SA_KEY')
   kobo:
+    asset_id: !expr Sys.getenv('ASSET_ID')
     token: !expr Sys.getenv('KOBO_TOKEN')
   storage:
     mongodb:
       connection_string: !expr Sys.getenv('MONGODB_CONNECTION_STRING')
   mapbox_token: !expr Sys.getenv('MAPBOX-TOKEN')
+  validation:
+    user: !expr Sys.getenv('VAL_USER')
+    pass: !expr Sys.getenv('VAL_PASS')
+
 
 dev:
   golem_wd: !expr golem::pkg_path()
