--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -40,15 +40,6 @@ jobs:
     name: Deploy Shiny app
     needs: update-data
     runs-on: ubuntu-latest
-    env:
-      R_CONFIG_ACTIVE: production
-      ASSET_ID: ${{ secrets.ASSET_ID }}
-      GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
-      KOBO_TOKEN: ${{ secrets.KOBO_TOKEN }}
-      MONGODB_CONNECTION_STRING: ${{ secrets.MONGODB_CONNECTION_STRING }}
-      MAPBOX_TOKEN: ${{ secrets.MAPBOX_TOKEN }}
-      VAL_USER: ${{ secrets.VAL_USER }}
-      VAL_PASS: ${{ secrets.VAL_PASS }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -86,6 +77,14 @@ jobs:
         with:
           service: peskas-malawi-shiny
           image: europe-west1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/peskas-malawi-shiny/${{ github.sha }}
+          env_vars: |
+            R_CONFIG_ACTIVE=production
+            ASSET_ID=${{ secrets.ASSET_ID }}
+            GCP_SA_KEY=${{ secrets.GCP_SA_KEY }}
+            KOBO_TOKEN=${{ secrets.KOBO_TOKEN }}
+            MAPBOX_TOKEN=${{ secrets.MAPBOX_TOKEN }}
+            VAL_USER=${{ secrets.VAL_USER }}
+            VAL_PASS=${{ secrets.VAL_PASS }}
           flags: >-
             --cpu=2
             --memory=4Gi
