--- a/inst/golem-config.yml
+++ b/inst/golem-config.yml
@@ -29,7 +29,7 @@ production:
   storage:
     mongodb:
       connection_string: !expr Sys.getenv('MONGODB_CONNECTION_STRING')
-  mapbox_token: !expr Sys.getenv('MAPBOX-TOKEN')
+  mapbox_token: !expr Sys.getenv('MAPBOX_TOKEN')
   validation:
     user: !expr Sys.getenv('VAL_USER')
     pass: !expr Sys.getenv('VAL_PASS')
